refactor(EIDOMNI-290): remove unnecessary checks